@@ -1,0 +1,12 @@
+<header>Use external commands to get and set quotas?</header>
+
+When this option is set to <b>Yes</b>, Virtualmin will use the commands in
+the configuration options below it to set and get user and group quotas. This
+can be useful if quotas on your server are managed in some way other than the
+standard Unix quota system, such as by a NFS server or ZFS filesystem.<p>
+
+By default it is set to <b>No</b>, which is the correct setting for almost
+all systems.<p>
+
+<footer>
+
