@@ -1,0 +1,13 @@
+<header>Command to set a user's quota</header>
+
+When external quota commands are being used, the program set in this
+option will be called when Virtualmin wants to set the quotas for a Unix
+user. The parameters it is called with are :
+<ol>
+<li>The Unix username
+<li>The new soft quota in 1 kB blocks, or 0 for unlimited.
+<li>The new hard quota in 1 kB blocks, or 0 for unlimited.
+</ol>
+
+<footer>
+
